--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-  <a class="navbar-brand" href="/">Main</a>
+  <a class="navbar-brand" href="/">Edureka</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,10 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Main <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">homepage <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/products"> Courses</a>
+        <a class="nav-link" href="/products"> Course add/drop</a>
       </li>
       
     </ul>
