--- a/views/products/list.pug
+++ b/views/products/list.pug
@@ -23,7 +23,7 @@ block content
                     td=product.city
                     td=product.service
                     td
-                        a(href="/products/delete/"+product._id, class="btn btn-danger") Delete
-                        a(href="/products/edit/"+product._id, class="btn btn-warning") Edit
+                        a(href="/products/delete/"+product._id, class="btn btn-warning") Delete
+                        a(href="/products/edit/"+product._id, class="btn btn-primary") Edit
 
 
