--- a/views/products/list.pug
+++ b/views/products/list.pug
@@ -5,7 +5,7 @@ block content
         .col-sm-8
             h1=title
         .col-sm-4
-            a(href="/products/add", class="btn btn-success ") ADD COURSE
+            a(href="/products/add", class="btn btn-primary ") ADD COURSE
     table.table
         thead
             tr
@@ -24,6 +24,6 @@ block content
                     td=product.service
                     td
                         a(href="/products/delete/"+product._id, class="btn btn-warning") Delete
-                        a(href="/products/edit/"+product._id, class="btn btn-primary") Edit
+                        a(href="/products/edit/"+product._id, class="btn btn-success") Edit
 
 
